--- a/login/index.html
+++ b/login/index.html
@@ -1,85 +1,88 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Material Compact Login Animation</title>
-  <link rel="icon" type="image/png" href="img/icon.png">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>IBS Hackathon 2018</title>
+    <meta name="description" content="IBS hackathon Project 2018">
+
+    <link rel="icon" type="image/png" href="img/icon.png">
 
 
-  <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
-<link rel='stylesheet prefetch' href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900&subset=latin,latin-ext'>
+    <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
+    <link rel='stylesheet prefetch' href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900&subset=latin,latin-ext'>
 
-      <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
 
 </head>
 
 <body>
 
-  <div class="materialContainer">
+    <div class="materialContainer">
 
 
-   <div class="box">
+        <div class="box">
 
-      <div class="title">LOGIN</div>
+            <div class="title">LOGIN</div>
 
-      <div class="input">
-         <label for="name">Username</label>
-         <input type="text" name="name" id="name">
-         <span class="spin"></span>
-      </div>
+            <div class="input">
+                <label for="name">Username</label>
+                <input type="text" name="name" id="name">
+                <span class="spin"></span>
+            </div>
 
-      <div class="input">
-         <label for="pass">Password</label>
-         <input type="password" name="pass" id="pass">
-         <span class="spin"></span>
-      </div>
+            <div class="input">
+                <label for="pass">Password</label>
+                <input type="password" name="pass" id="pass">
+                <span class="spin"></span>
+            </div>
 
-      <div class="button login">
-         <button><span>GO</span> <i class="fa fa-check"></i></button>
-      </div>
+            <div class="button login">
+                <button><span>GO</span> <i class="fa fa-check"></i></button>
+            </div>
 
-      <a href="" class="pass-forgot">Forgot your password?</a>
+            <a href="" class="pass-forgot">Forgot your password?</a>
 
-   </div>
+        </div>
 
-   <div class="overbox">
-      <div class="material-button alt-2"><span class="shape"></span></div>
+        <div class="overbox">
+            <div class="material-button alt-2"><span class="shape"></span></div>
 
-      <div class="title">REGISTER</div>
+            <div class="title">REGISTER</div>
 
-      <div class="input">
-         <label for="regname">Username</label>
-         <input type="text" name="regname" id="regname">
-         <span class="spin"></span>
-      </div>
+            <div class="input">
+                <label for="regname">Username</label>
+                <input type="text" name="regname" id="regname">
+                <span class="spin"></span>
+            </div>
 
-      <div class="input">
-         <label for="regpass">Password</label>
-         <input type="password" name="regpass" id="regpass">
-         <span class="spin"></span>
-      </div>
+            <div class="input">
+                <label for="regpass">Password</label>
+                <input type="password" name="regpass" id="regpass">
+                <span class="spin"></span>
+            </div>
 
-      <div class="input">
-         <label for="reregpass">Repeat Password</label>
-         <input type="password" name="reregpass" id="reregpass">
-         <span class="spin"></span>
-      </div>
+            <div class="input">
+                <label for="reregpass">Repeat Password</label>
+                <input type="password" name="reregpass" id="reregpass">
+                <span class="spin"></span>
+            </div>
 
-      <div class="button">
-         <button><span>NEXT</span></button>
-      </div>
-
-
-   </div>
-
-</div>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+            <div class="button">
+                <button><span>NEXT</span></button>
+            </div>
 
 
+        </div>
 
-    <script  src="js/index.js"></script>
+    </div>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
+
+
+    <script src="js/index.js"></script>
 
 
 
