Add more login/register fields

--- a/login/index.html
+++ b/login/index.html
@@ -25,16 +25,40 @@
 
         <div class="box">
 
-            <div class="title">LOGIN</div>
+            <div class="title">REGISTER</div>
 
             <div class="input">
-                <label for="name">Username</label>
+                <label for="name">Name</label>
                 <input type="text" name="name" id="name">
                 <span class="spin"></span>
             </div>
 
             <div class="input">
+                <label for="name">Aadhar</label>
+                <input type="text" name="name" id="name">
+                <span class="spin"></span>
+            </div>
+
+            <div class="input">
+                <label for="pass">Username</label>
+                <input type="password" name="pass" id="pass">
+                <span class="spin"></span>
+            </div>
+
+            <div class="input">
                 <label for="pass">Password</label>
+                <input type="password" name="pass" id="pass">
+                <span class="spin"></span>
+            </div>
+
+            <div class="input">
+                <label for="pass">E-mail</label>
+                <input type="password" name="pass" id="pass">
+                <span class="spin"></span>
+            </div>
+
+            <div class="input">
+                <label for="pass">Phone Number</label>
                 <input type="password" name="pass" id="pass">
                 <span class="spin"></span>
             </div>
@@ -50,7 +74,7 @@
         <div class="overbox">
             <div class="material-button alt-2"><span class="shape"></span></div>
 
-            <div class="title">REGISTER</div>
+            <div class="title">LOGIN</div>
 
             <div class="input">
                 <label for="regname">Username</label>
