Fix sign in/sign up form

--- a/login/index.html
+++ b/login/index.html
@@ -34,26 +34,26 @@
             </div>
 
             <div class="input">
-                <label for="name">Aadhar</label>
-                <input type="text" name="name" id="name">
+                <label for="aadhar">Aadhar</label>
+                <input type="number" name="aadhar" id="aadhar">
                 <span class="spin"></span>
             </div>
 
             <div class="input">
-                <label for="pass">Username</label>
-                <input type="password" name="pass" id="pass">
+                <label for="username">Username</label>
+                <input type="text" name="username" id="username">
                 <span class="spin"></span>
             </div>
 
             <div class="input">
-                <label for="pass">Password</label>
-                <input type="password" name="pass" id="pass">
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password">
                 <span class="spin"></span>
             </div>
 
             <div class="input">
-                <label for="pass">Phone Number</label>
-                <input type="password" name="pass" id="pass">
+                <label for="phone">Phone Number</label>
+                <input type="number" name="phone" id="phone">
                 <span class="spin"></span>
             </div>
 
@@ -71,20 +71,14 @@
             <div class="title">LOGIN</div>
 
             <div class="input">
-                <label for="regname">Username</label>
-                <input type="text" name="regname" id="regname">
+                <label for="login_username">Username</label>
+                <input type="text" name="username" id="login_username">
                 <span class="spin"></span>
             </div>
 
             <div class="input">
-                <label for="regpass">Password</label>
-                <input type="password" name="regpass" id="regpass">
-                <span class="spin"></span>
-            </div>
-
-            <div class="input">
-                <label for="reregpass">Repeat Password</label>
-                <input type="password" name="reregpass" id="reregpass">
+                <label for="login_password">Password</label>
+                <input type="password" name="password" id="login_password">
                 <span class="spin"></span>
             </div>
 
