--- a/login/index.html
+++ b/login/index.html
@@ -7,7 +7,7 @@
     <title>IBS Hackathon 2018</title>
     <meta name="description" content="IBS hackathon Project 2018">
 
-    <link rel="icon" type="image/png" href="img/icon.png">
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
 
     <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
