--- a/login/index.html
+++ b/login/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>IBS Hackathon 2018</title>
+    <title>IRCTC v2.0</title>
     <meta name="description" content="IBS hackathon Project 2018">
 
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
@@ -19,6 +19,12 @@
 </head>
 
 <body>
+
+		<div class="intro">
+
+			<h1>IRCTC v2.0</h1>
+			<h2>Next Gen Blockchain based eTicketing System</h2>
+		</div>
 
     <div class="materialContainer">
 
