--- a/homepage/index.html
+++ b/homepage/index.html
@@ -17,12 +17,18 @@
             <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar>
                 <div class="uk-navbar-left">
                     <ul class="uk-navbar-nav">
-                        <li class="uk-active"><a href="#">Welcome !Customer </a></li>
+                      <li class="uk-active"><a href="#">Welcome! &lt;username&gt;</a></li>
                     </ul>
+                </div>
+                <div class="uk-navbar-center">
+                    <a href="" class="uk-navbar-item uk-logo">IRCTC v2.0</a>
                 </div>
                 <div class="uk-navbar-right">
                     <ul class="uk-navbar-nav">
-                        <li><a href="#">Wallet =  0</a></li>
+                        <li class="uk-active"><a href="#">Wallet Balance ₹4200</a></li>
+                        <li><a href="#">Profile</a></li>
+                        <li><a href="#">Settings</a></li>
+                        <li><a href="#">Logout</a></li>
                     </ul>
                 </div>
             </nav>
