--- a/homepage/index.html
+++ b/homepage/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>IRCTC 2.0</title>
     <link rel="stylesheet" href="css/uikit.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
@@ -14,21 +15,26 @@
 
     <div class="uk-position-relative">
         <div class="uk-position-top">
-            <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar>
+            <nav class="uk-navbar-container" uk-navbar>
                 <div class="uk-navbar-left">
                     <ul class="uk-navbar-nav">
-                      <li class="uk-active"><a href="#">Welcome! &lt;username&gt;</a></li>
+                      <a href="" class="uk-navbar-item uk-logo">IRCTC v2.0</a>
                     </ul>
-                </div>
-                <div class="uk-navbar-center">
-                    <a href="" class="uk-navbar-item uk-logo">IRCTC v2.0</a>
                 </div>
                 <div class="uk-navbar-right">
                     <ul class="uk-navbar-nav">
                         <li class="uk-active"><a href="#">Wallet Balance ₹4200</a></li>
-                        <li><a href="#">Profile</a></li>
-                        <li><a href="#">Settings</a></li>
-                        <li><a href="#">Logout</a></li>
+                        <li>
+                            <a href="#">abhijitparida01</a>
+                            <div class="uk-navbar-dropdown">
+                                <ul class="uk-nav uk-navbar-dropdown-nav">
+                                    <li><a href="#">Profile</a></li>
+                                    <li><a href="#">Settings</a></li>
+                                    <li class="uk-nav-divider"></li>
+                                    <li><a href="#">Logout</a></li>
+                                </ul>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </nav>
