--- a/homepage/index.html
+++ b/homepage/index.html
@@ -18,13 +18,13 @@
             <nav class="uk-navbar-container" uk-navbar>
                 <div class="uk-navbar-left">
                     <ul class="uk-navbar-nav">
-                      <a href="" class="uk-navbar-item uk-logo">IRCTC v2.0</a>
+                        <a href="" class="uk-navbar-item uk-logo">IRCTC v2.0</a>
                     </ul>
                 </div>
                 <div class="uk-navbar-right">
                     <ul class="uk-navbar-nav">
-                        <li class="uk-active"><a href="#">Wallet Balance ₹4200</a></li>
-                        <li>
+                        <li><a href="#">Wallet Balance ₹4200</a></li>
+                        <li class="uk-active">
                             <a href="#">abhijitparida01</a>
                             <div class="uk-navbar-dropdown">
                                 <ul class="uk-nav uk-navbar-dropdown-nav">
