--- a/homepage/index.html
+++ b/homepage/index.html
@@ -41,6 +41,13 @@
         </div>
     </div>
 
+    <div class="uk-container">
+        <div class="uk-card uk-card-default uk-card-body uk-align-center uk-width-1-2@m">
+            <h3 class="uk-card-title">Default</h3>
+            <p>Lorem ipsum <a href="#">dolor</a> sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+    </div>
+
 
 
     <script src="js/uikit.min.js"></script>
