--- a/homepage/index.html
+++ b/homepage/index.html
@@ -25,7 +25,7 @@
                     <ul class="uk-navbar-nav">
                         <li><a href="#">Wallet Balance ₹4200</a></li>
                         <li class="uk-active">
-                            <a href="#">abhijitparida01</a>
+                            <a href="#"><span class="uk-margin-small-right" uk-icon="icon: user"></span> abhijitparida01</a>
                             <div class="uk-navbar-dropdown">
                                 <ul class="uk-nav uk-navbar-dropdown-nav">
                                     <li><a href="#">Profile</a></li>
