--- a/homepage/index.html
+++ b/homepage/index.html
@@ -43,9 +43,40 @@
 
     <div class="uk-container">
         <div class="uk-card uk-card-default uk-card-body uk-align-center uk-width-1-2@m">
-            <h3 class="uk-card-title">Default</h3>
-            <p>Lorem ipsum <a href="#">dolor</a> sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <div class="uk-card-header">
+                <h3 class="uk-card-title" align="center">Book Train</h3>
+            </div>
+            <div class="uk-card-body">
+                <form>
+                    <fieldset class="uk-fieldset">
+
+                        <div class="uk-margin">
+                            <select class="uk-select">
+                                 <option>Select Source Station</option>
+                                 <option>Station 01</option>
+                                 <option>Station 02</option>
+                              </select>
+                        </div>
+
+                        <div class="uk-margin">
+                            <select class="uk-select">
+                                   <option>Select Destination Station</option>
+                                   <option>Station 01</option>
+                                   <option>Station 02</option>
+                              </select>
+                        </div>
+
+                        <div class="uk-margin">
+                            <button class="uk-button uk-button-primary uk-align-center">Find trains</button>
+                        </div>
+
+                    </fieldset>
+                </form>
+            </div>
+
+
         </div>
+
     </div>
 
 
