add datepicker in search

--- a/homepage/result.html
+++ b/homepage/result.html
@@ -44,34 +44,10 @@
     <div class="uk-container">
         <div class="uk-card uk-card-default uk-card-body uk-align-center uk-width-1-2@m">
             <div class="uk-card-header">
-                <h3 class="uk-card-title" align="center">Book Train</h3>
+                <h3 class="uk-card-title" align="center">Result</h3>
             </div>
             <div class="uk-card-body">
-                <form>
-                    <fieldset class="uk-fieldset">
 
-                        <div class="uk-margin">
-                            <select class="uk-select">
-                                 <option>Select Source Station</option>
-                                 <option>Station 01</option>
-                                 <option>Station 02</option>
-                              </select>
-                        </div>
-
-                        <div class="uk-margin">
-                            <select class="uk-select">
-                                   <option>Select Destination Station</option>
-                                   <option>Station 01</option>
-                                   <option>Station 02</option>
-                              </select>
-                        </div>
-
-                        <div class="uk-margin">
-                            <button class="uk-button uk-button-primary uk-align-center">Find trains</button>
-                        </div>
-
-                    </fieldset>
-                </form>
             </div>
 
 
