--- a/homepage/search.html
+++ b/homepage/search.html
@@ -67,6 +67,10 @@
                         </div>
 
                         <div class="uk-margin">
+                            <input type="date" data-uk-datepicker="{format:'DD.MM.YYYY'}">
+                        </div>
+
+                        <div class="uk-margin">
                             <button class="uk-button uk-button-primary uk-align-center">Find trains</button>
                         </div>
 
