Add header of result card

--- a/homepage/result.html
+++ b/homepage/result.html
@@ -45,8 +45,19 @@
         <div class="uk-card uk-card-default uk-card-body uk-align-center uk-width-1-2@m">
             <div class="uk-card-header">
                 <h3 class="uk-card-title" align="center">Result</h3>
+                <div class="uk-align-left">
+                    <p>From</p>
+                    <h3>Station 01</h3>
+                </div>
+                <div class="uk-align-right">
+                    <p>To</p>
+                    <h3>Station 02</h3>
+                </div>
             </div>
             <div class="uk-card-body">
+                <div class="uk-card uk-card-default">
+                    <h3>hello</h3>
+                </div>
 
             </div>
 
