add result trains cards

--- a/homepage/result.html
+++ b/homepage/result.html
@@ -56,7 +56,30 @@
             </div>
             <div class="uk-card-body">
                 <div class="uk-card uk-card-default">
-                    <h3>hello</h3>
+                    <div class="uk-card-body">
+                        <h3>Train name</h3>
+                        <p>Train number<br> Date: dd/mm/yyyy<br> Scheduled Arrival: hh:mm<br> Scheduled Departure: hh:mm
+                        </p>
+                        <h4>Price : ₹ 2500</h4>
+                    </div>
+                </div>
+
+                <div class="uk-card uk-card-default">
+                    <div class="uk-card-body">
+                        <h3>Train name</h3>
+                        <p>Train number<br> Date: dd/mm/yyyy<br> Scheduled Arrival: hh:mm<br> Scheduled Departure: hh:mm
+                        </p>
+                        <h4>Price : ₹ 2500</h4>
+                    </div>
+                </div>
+
+                <div class="uk-card uk-card-default">
+                    <div class="uk-card-body">
+                        <h3>Train name</h3>
+                        <p>Train number<br> Date: dd/mm/yyyy<br> Scheduled Arrival: hh:mm<br> Scheduled Departure: hh:mm
+                        </p>
+                        <h4>Price : ₹ 2500</h4>
+                    </div>
                 </div>
 
             </div>
