Added datepicker to search.html

--- a/homepage/search.html
+++ b/homepage/search.html
@@ -23,15 +23,24 @@
                 </div>
                 <div class="uk-navbar-right">
                     <ul class="uk-navbar-nav">
-                        <li><a href="#">Wallet Balance ₹4200</a></li>
+                        <li>
+                            <a href="#">Wallet Balance ₹4200</a>
+                        </li>
                         <li class="uk-active">
-                            <a href="#"><span class="uk-margin-small-right" uk-icon="icon: user"></span> abhijitparida01</a>
+                            <a href="#">
+                                <span class="uk-margin-small-right" uk-icon="icon: user"></span> abhijitparida01</a>
                             <div class="uk-navbar-dropdown">
                                 <ul class="uk-nav uk-navbar-dropdown-nav">
-                                    <li><a href="#">Profile</a></li>
-                                    <li><a href="#">Settings</a></li>
+                                    <li>
+                                        <a href="#">Profile</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Settings</a>
+                                    </li>
                                     <li class="uk-nav-divider"></li>
-                                    <li><a href="#">Logout</a></li>
+                                    <li>
+                                        <a href="#">Logout</a>
+                                    </li>
                                 </ul>
                             </div>
                         </li>
@@ -52,22 +61,23 @@
 
                         <div class="uk-margin">
                             <select class="uk-select">
-                                 <option>Select Source Station</option>
-                                 <option>Station 01</option>
-                                 <option>Station 02</option>
-                              </select>
+                                <option>Select Source Station</option>
+                                <option>Station 01</option>
+                                <option>Station 02</option>
+                            </select>
                         </div>
 
                         <div class="uk-margin">
                             <select class="uk-select">
-                                   <option>Select Destination Station</option>
-                                   <option>Station 01</option>
-                                   <option>Station 02</option>
-                              </select>
+                                <option>Select Destination Station</option>
+                                <option>Station 01</option>
+                                <option>Station 02</option>
+                            </select>
                         </div>
 
                         <div class="uk-margin">
-                            <input type="date" data-uk-datepicker="{format:'DD.MM.YYYY'}">
+                            Journey Date:
+                            <input class="uk-input" type="date">
                         </div>
 
                         <div class="uk-margin">
