--- a/homepage/search.html
+++ b/homepage/search.html
@@ -23,6 +23,18 @@
                 </div>
                 <div class="uk-navbar-right">
                     <ul class="uk-navbar-nav">
+                        <li>
+                            <a href="#"><span class="uk-margin-small-right" uk-icon="icon: bell"></span> <span class="uk-badge">20</span></a>
+                            <div class="uk-navbar-dropdown uk-navbar-dropdown-width-2">
+                                <ul class="uk-nav uk-navbar-dropdown-nav">
+                                    <li class="uk-nav-header">Swap Requests</li>
+                                    <li><a href="#">Alpha</a></li>
+                                    <li><a href="#">Bravo</a></li>
+                                    <li><a href="#">Charlie</a></li>
+                                    <li><a href="#">Echo</a></li>
+                                </ul>
+                            </div>
+                        </li>
                         <li><a href="#">Wallet Balance ₹4200</a></li>
                         <li class="uk-active">
                             <a href="#"><span class="uk-margin-small-right" uk-icon="icon: user"></span> abhijitparida01</a>
