Fix margins in results.html

--- a/homepage/result.html
+++ b/homepage/result.html
@@ -42,20 +42,21 @@
     </div>
 
     <div class="uk-container">
-        <div class="uk-card uk-card-default uk-card-body uk-align-center uk-width-1-2@m">
-            <div class="uk-card-header">
-                <h3 class="uk-card-title" align="center">Result</h3>
-                <div class="uk-align-left">
-                    <p>From</p>
-                    <h3>Station 01</h3>
-                </div>
-                <div class="uk-align-right">
-                    <p>To</p>
-                    <h3>Station 02</h3>
+        <div class="uk-card uk-card-default uk-card-body uk-align-center uk-width-1-2@m uk-margin-large-bottom">
+            <div class="uk-card-body uk-padding-remove-bottom">
+                <div uk-grid>
+                    <div class="uk-align-left">
+                        <p>From</p>
+                        <h2 class="uk-margin-small-top">Station 01</h2>
+                    </div>
+                    <div class="uk-align-right">
+                        <p>To</p>
+                        <h2 class="uk-margin-small-top">Station 02</h2>
+                    </div>
                 </div>
             </div>
-            <div class="uk-card-body">
-                <div class="uk-card uk-card-default">
+            <div class="uk-card-body uk-padding-remove-top">
+                <div class="uk-card uk-card-default uk-margin-medium-top">
                     <div class="uk-card-body">
                         <h3>Train name</h3>
                         <p>Train number<br> Date: dd/mm/yyyy<br> Scheduled Arrival: hh:mm<br> Scheduled Departure: hh:mm
@@ -64,7 +65,7 @@
                     </div>
                 </div>
 
-                <div class="uk-card uk-card-default">
+                <div class="uk-card uk-card-default uk-margin-medium-top">
                     <div class="uk-card-body">
                         <h3>Train name</h3>
                         <p>Train number<br> Date: dd/mm/yyyy<br> Scheduled Arrival: hh:mm<br> Scheduled Departure: hh:mm
@@ -73,7 +74,7 @@
                     </div>
                 </div>
 
-                <div class="uk-card uk-card-default">
+                <div class="uk-card uk-card-default uk-margin-medium-top">
                     <div class="uk-card-body">
                         <h3>Train name</h3>
                         <p>Train number<br> Date: dd/mm/yyyy<br> Scheduled Arrival: hh:mm<br> Scheduled Departure: hh:mm
