Redesign notification dropdown

--- a/homepage/search.html
+++ b/homepage/search.html
@@ -28,10 +28,27 @@
                             <div class="uk-navbar-dropdown uk-navbar-dropdown-width-2">
                                 <ul class="uk-nav uk-navbar-dropdown-nav">
                                     <li class="uk-nav-header">Swap Requests</li>
-                                    <li><a href="#">Alpha</a></li>
-                                    <li><a href="#">Bravo</a></li>
-                                    <li><a href="#">Charlie</a></li>
-                                    <li><a href="#">Echo</a></li>
+                                    <li>
+                                        <a href="#">
+                                            <div class="uk-card uk-card-default uk-card-body uk-margin-remove-top">
+                                                Komal has requested to swap the seat with B-68
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <div class="uk-card uk-card-default uk-card-body uk-margin-remove-top">
+                                                Swaraj has requested to swap the seat with B-69
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <div class="uk-card uk-card-default uk-card-body uk-margin-remove-top">
+                                                Vizal has requested to swap the seat with B-96
+                                            </div>
+                                        </a>
+                                    </li>
                                 </ul>
                             </div>
                         </li>
