--- a/homepage/result.html
+++ b/homepage/result.html
@@ -23,15 +23,51 @@
                 </div>
                 <div class="uk-navbar-right">
                     <ul class="uk-navbar-nav">
+                        <li>
+                            <a href="#"><span class="uk-margin-small-right" uk-icon="icon: bell"></span> <span class="uk-badge">20</span></a>
+                            <div class="uk-navbar-dropdown uk-navbar-dropdown-width-2">
+                                <ul class="uk-nav uk-navbar-dropdown-nav">
+                                    <li class="uk-nav-header">Swap Requests</li>
+                                    <li>
+                                        <a href="#">
+                                            <div class="uk-card uk-card-default uk-card-body uk-margin-remove-top">
+                                                Komal has requested to swap the seat with B-68
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <div class="uk-card uk-card-default uk-card-body uk-margin-remove-top">
+                                                Swaraj has requested to swap the seat with B-69
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <div class="uk-card uk-card-default uk-card-body uk-margin-remove-top">
+                                                Vizal has requested to swap the seat with B-96
+                                            </div>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
                         <li><a href="#">Wallet Balance ₹4200</a></li>
                         <li class="uk-active">
-                            <a href="#"><span class="uk-margin-small-right" uk-icon="icon: user"></span> abhijitparida01</a>
+                            <a href="#">
+                                <span class="uk-margin-small-right" uk-icon="icon: user"></span> abhijitparida01</a>
                             <div class="uk-navbar-dropdown">
                                 <ul class="uk-nav uk-navbar-dropdown-nav">
-                                    <li><a href="#">Profile</a></li>
-                                    <li><a href="#">Settings</a></li>
+                                    <li>
+                                        <a href="#">Profile</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Settings</a>
+                                    </li>
                                     <li class="uk-nav-divider"></li>
-                                    <li><a href="#">Logout</a></li>
+                                    <li>
+                                        <a href="#">Logout</a>
+                                    </li>
                                 </ul>
                             </div>
                         </li>
