--- a/homepage/search.html
+++ b/homepage/search.html
@@ -79,7 +79,7 @@
 
     <div class="uk-container">
         <div class="uk-card uk-card-default uk-card-body uk-align-center uk-width-1-2@m">
-            <div class="uk-card-header">
+            <div class="uk-card-body uk-padding-small">
                 <h3 class="uk-card-title" align="center">Book Train</h3>
             </div>
             <div class="uk-card-body">
