Add Passenger details form

--- a/homepage/booking.html
+++ b/homepage/booking.html
@@ -80,6 +80,36 @@
     <div class="uk-container">
         <div class="uk-card uk-card-default uk-card-body uk-align-center uk-width-1-2@m uk-margin-large-bottom">
 
+            <div class="uk-card-body uk-padding-small">
+                <h3 class="uk-card-title" align="center">Enter Passenger Details</h3>
+            </div>
+
+            <div class="uk-card uk-card-default uk-margin-remove-top">
+                <div class="uk-card-body">
+                    <form>
+                        <fieldset class="uk-fieldset">
+
+                            <div class="uk-margin">
+                                <input class="uk-input" type="text" placeholder="Enter Passenger Name">
+                            </div>
+
+                            <div class="uk-margin">
+                                <input class="uk-input" type="number" placeholder="Enter Passenger's Age">
+                            </div>
+
+                            <div class="uk-margin">
+                                <input class="uk-input" type="number" placeholder="Enter Passenger's Aadhar Card Number">
+                            </div>
+
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
+
+            <div class="uk-margin">
+                <button class="uk-button uk-button-primary uk-align-center">Book Tickets</button>
+            </div>
+
         </div>
     </div>
 
