--- a/homepage/booking.html
+++ b/homepage/booking.html
@@ -102,7 +102,7 @@
                             </div>
 
                             <div>
-                                <button class="uk-button uk-button-default" type="button" id="btn1" onclick="javascript:showDiv('form-2');this.style.display = 'none'">Add Passenger</button>
+                                <button class="uk-button uk-button-default" type="button" id="btn1" onclick="showDiv('form-2');this.style.display = 'none'">Add Passenger</button>
                             </div>
 
                         </fieldset>
@@ -128,7 +128,7 @@
                             </div>
 
                             <div>
-                                <button class="uk-button uk-button-default" type="button" id="btn2" onclick="javascript:showDiv('form-3');this.style.display = 'none'">Add Passenger</button>
+                                <button class="uk-button uk-button-default" type="button" id="btn2" onclick="showDiv('form-3');this.style.display = 'none'">Add Passenger</button>
                             </div>
                         </fieldset>
                     </form>
@@ -164,18 +164,10 @@
         </div>
     </div>
 
-    <script type="text/javascript">
-        function showDiv(formid) {
-            div = document.getElementById(formid);
-            div.style.display = "block";
-
-        }
-    </script>
 
 
 
-
-
+    <script src="js/script.js"></script>
     <script src="js/uikit.min.js"></script>
     <script src="js/uikit-icons.min.js"></script>
 
