--- a/homepage/ticket.html
+++ b/homepage/ticket.html
@@ -84,7 +84,11 @@
                 <h3 class="uk-card-title" align="center">Ticket Details for PNR 1000420</h3>
             </div>
             <div class="uk-card-body">
-                <div id="seat-map">
+                <div class="uk-grid uk-child-width-expand">
+                  <div id="seat-map"></div>
+                  <div>
+                    <h1>Swap Requests</h1>
+                  </div>
                 </div>
             </div>
 
