--- a/homepage/booking.html
+++ b/homepage/booking.html
@@ -84,7 +84,7 @@
                 <h3 class="uk-card-title" align="center">Enter Passenger Details</h3>
             </div>
 
-            <div class="uk-card uk-card-default uk-margin-remove-top">
+            <div class="uk-card uk-card-default uk-margin-small">
                 <div class="uk-card-body">
                     <form>
                         <fieldset class="uk-fieldset">
@@ -110,7 +110,7 @@
                 </div>
             </div>
 
-            <div class="uk-card uk-card-default uk-margin-remove-top" id="form-2">
+            <div class="uk-card uk-card-default uk-margin-small" id="form-2">
                 <div class="uk-card-body">
                     <form>
                         <fieldset class="uk-fieldset">
@@ -135,7 +135,7 @@
                 </div>
             </div>
 
-            <div class="uk-card uk-card-default uk-margin-remove-top" id="form-3">
+            <div class="uk-card uk-card-default uk-margin-small" id="form-3">
                 <div class="uk-card-body">
                     <form>
                         <fieldset class="uk-fieldset">
