Add book button in result

--- a/homepage/result.html
+++ b/homepage/result.html
@@ -97,7 +97,7 @@
                         <h3>Train name</h3>
                         <p>Train number<br> Date: dd/mm/yyyy<br> Scheduled Arrival: hh:mm<br> Scheduled Departure: hh:mm
                         </p>
-                        <h4>Price : ₹ 2500</h4>
+                        <h4>Price : ₹ 2500 <button class="uk-button uk-button-primary uk-align-right uk-margin-remove-bottom">Book</button> </h4>
                     </div>
                 </div>
 
@@ -106,7 +106,7 @@
                         <h3>Train name</h3>
                         <p>Train number<br> Date: dd/mm/yyyy<br> Scheduled Arrival: hh:mm<br> Scheduled Departure: hh:mm
                         </p>
-                        <h4>Price : ₹ 2500</h4>
+                        <h4>Price : ₹ 2500 <button class="uk-button uk-button-primary uk-align-right uk-margin-remove-bottom">Book</button> </h4>
                     </div>
                 </div>
 
@@ -115,7 +115,7 @@
                         <h3>Train name</h3>
                         <p>Train number<br> Date: dd/mm/yyyy<br> Scheduled Arrival: hh:mm<br> Scheduled Departure: hh:mm
                         </p>
-                        <h4>Price : ₹ 2500</h4>
+                        <h4>Price : ₹ 2500 <button class="uk-button uk-button-primary uk-align-right uk-margin-remove-bottom">Book</button> </h4>
                     </div>
                 </div>
 
