--- a/homepage/ticket.html
+++ b/homepage/ticket.html
@@ -87,7 +87,14 @@
                 <div class="uk-grid uk-child-width-expand">
                   <div id="seat-map"></div>
                   <div>
-                    <h1>Swap Requests</h1>
+                    <button class="uk-button uk-button-primary uk-width-1-1">Swap Seats</button>
+                    <p>You can swap seats with other passengers by sending them a swap request.</p>
+                    <hr>
+                    <h4>Swap Requests:</h4>
+                    <span class="uk-badge">22</span> ⇋ <span class="uk-badge">22</span>
+                    <p class="uk-text-medium uk-margin-small">Swap request from Swaraj Laha</p>
+                    <button class="uk-button uk-button-default uk-button-small">Accept</button>
+                    <button class="uk-button uk-button-default uk-button-small">Reject</button>
                   </div>
                 </div>
             </div>
