--- a/homepage/booking.html
+++ b/homepage/booking.html
@@ -158,7 +158,9 @@
             </div>
 
             <div class="uk-margin">
-                <button class="uk-button uk-button-primary uk-align-center">Book Tickets</button>
+                <button class="uk-button uk-button-primary uk-align-center uk-marigin-small">Add Meals</button>
+                <button class="uk-button uk-button-primary uk-align-center uk-margin-remove-top">Book Tickets</button>
+
             </div>
 
         </div>
