Redesign notification/seat request ui

--- a/homepage/ticket.html
+++ b/homepage/ticket.html
@@ -25,28 +25,23 @@
                 <div class="uk-navbar-right">
                     <ul class="uk-navbar-nav">
                         <li>
-                            <a href="#"><span class="uk-margin-small-right" uk-icon="icon: bell"></span> <span class="uk-badge">20</span></a>
+                            <a href="#"><span class="uk-margin-small-right" uk-icon="icon: bell"></span> <span class="uk-badge">2</span></a>
                             <div class="uk-navbar-dropdown uk-navbar-dropdown-width-2">
                                 <ul class="uk-nav uk-navbar-dropdown-nav">
                                     <li class="uk-nav-header">Swap Requests</li>
                                     <li>
                                         <a href="#">
                                             <div class="uk-card uk-card-default uk-card-body uk-margin-remove-top">
-                                                Komal has requested to swap the seat with B-68
+                                                <span class="uk-badge">22</span> ⇋ <span class="uk-badge">40</span>
+                                                <p class="uk-text-medium uk-margin-small">Swap request from Swaraj Laha</p>
                                             </div>
                                         </a>
                                     </li>
                                     <li>
                                         <a href="#">
                                             <div class="uk-card uk-card-default uk-card-body uk-margin-remove-top">
-                                                Swaraj has requested to swap the seat with B-69
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <div class="uk-card uk-card-default uk-card-body uk-margin-remove-top">
-                                                Vizal has requested to swap the seat with B-96
+                                                <span class="uk-badge">24</span> ⇋ <span class="uk-badge">36</span>
+                                                <p class="uk-text-medium uk-margin-small">Swap request from Swaraj Laha</p>
                                             </div>
                                         </a>
                                     </li>
@@ -91,10 +86,18 @@
                     <p>You can swap seats with other passengers by sending them a swap request.</p>
                     <hr>
                     <h4>Swap Requests:</h4>
-                    <span class="uk-badge">22</span> ⇋ <span class="uk-badge">22</span>
-                    <p class="uk-text-medium uk-margin-small">Swap request from Swaraj Laha</p>
-                    <button class="uk-button uk-button-default uk-button-small">Accept</button>
-                    <button class="uk-button uk-button-default uk-button-small">Reject</button>
+                    <div class="uk-margin-medium-bottom">
+                      <span class="uk-badge">22</span> ⇋ <span class="uk-badge">40</span>
+                      <p class="uk-text-medium uk-margin-small">Swap request from Swaraj Laha</p>
+                      <button class="uk-button uk-button-secondary uk-button-small">Accept</button>
+                      <button class="uk-button uk-button-default uk-button-small">Reject</button>
+                    </div>
+                    <div class="uk-margin-medium-bottom">
+                      <span class="uk-badge">24</span> ⇋ <span class="uk-badge">36</span>
+                      <p class="uk-text-medium uk-margin-small">Swap request from Swaraj Laha</p>
+                      <button class="uk-button uk-button-secondary uk-button-small">Accept</button>
+                      <button class="uk-button uk-button-default uk-button-small">Reject</button>
+                    </div>
                   </div>
                 </div>
             </div>
