--- a/homepage/search.html
+++ b/homepage/search.html
@@ -24,28 +24,23 @@
                 <div class="uk-navbar-right">
                     <ul class="uk-navbar-nav">
                         <li>
-                            <a href="#"><span class="uk-margin-small-right" uk-icon="icon: bell"></span> <span class="uk-badge">20</span></a>
+                            <a href="#"><span class="uk-margin-small-right" uk-icon="icon: bell"></span> <span class="uk-badge">2</span></a>
                             <div class="uk-navbar-dropdown uk-navbar-dropdown-width-2">
                                 <ul class="uk-nav uk-navbar-dropdown-nav">
                                     <li class="uk-nav-header">Swap Requests</li>
                                     <li>
                                         <a href="#">
                                             <div class="uk-card uk-card-default uk-card-body uk-margin-remove-top">
-                                                Komal has requested to swap the seat with B-68
+                                                <span class="uk-badge">22</span> ⇋ <span class="uk-badge">40</span>
+                                                <p class="uk-text-medium uk-margin-small">Swap request from Swaraj Laha</p>
                                             </div>
                                         </a>
                                     </li>
                                     <li>
                                         <a href="#">
                                             <div class="uk-card uk-card-default uk-card-body uk-margin-remove-top">
-                                                Swaraj has requested to swap the seat with B-69
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <div class="uk-card uk-card-default uk-card-body uk-margin-remove-top">
-                                                Vizal has requested to swap the seat with B-96
+                                                <span class="uk-badge">24</span> ⇋ <span class="uk-badge">36</span>
+                                                <p class="uk-text-medium uk-margin-small">Swap request from Swaraj Laha</p>
                                             </div>
                                         </a>
                                     </li>
