--- a/homepage/food.html
+++ b/homepage/food.html
@@ -79,6 +79,52 @@
 
     <div class="uk-container">
         <div class="uk-card uk-card-default uk-card-body uk-align-center uk-width-1-2@m">
+            <div class="uk-card-body uk-padding-small">
+                <h3 class="uk-card-title" align="center">Add Meals To Your Journey</h3>
+            </div>
+            <div class="uk-card-body">
+                <div class="uk-card uk-card-default uk-card-body uk-margin-remove-top">
+                    <div uk-grid>
+                        <div class="uk-width-1-3">
+                            <img src="img/food.png">
+                        </div>
+                        <div class="uk-width-2-3">
+                            <h3>Lunch Meal</h3>
+                            <p>Includes 1 paratha, rice,dal, papad</p>
+                            <p> 3.5 <span uk-icon="icon: star; ratio:0.75"></span> <button class="uk-button uk-button-primary uk-align-right uk-button-small">Add This Pack</button> </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="uk-card uk-card-default uk-card-body uk-margin-small">
+                    <div uk-grid>
+                        <div class="uk-width-1-3">
+                            <img src="img/food.png">
+                        </div>
+                        <div class="uk-width-2-3">
+                            <h3>Dinner Meal</h3>
+                            <p>Includes 1 paratha, rice,dal, papad</p>
+                            <p> 3.5 <span uk-icon="icon: star; ratio:0.75"></span> <button class="uk-button uk-button-primary uk-align-right uk-button-small">Add This Pack</button> </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="uk-card uk-card-default uk-card-body uk-margin-small">
+                    <div uk-grid>
+                        <div class="uk-width-1-3">
+                            <img src="img/food.png">
+                        </div>
+                        <div class="uk-width-2-3">
+                            <h3>Breakfast Meal</h3>
+                            <p>Includes 1 paratha, rice,dal, papad</p>
+                            <p> 3.5 <span uk-icon="icon: star; ratio:0.75"></span> <button class="uk-button uk-button-primary uk-align-right uk-button-small">Add This Pack</button> </p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+
 
         </div>
 
