--- a/homepage/booking.html
+++ b/homepage/booking.html
@@ -153,7 +153,7 @@
             </div>
 
             <div class="uk-margin">
-                <button class="uk-button uk-button-primary uk-align-center uk-marigin-small">Add Meals</button>
+                <a target="_blank" href="food.html"><button class="uk-button uk-button-primary uk-align-center uk-marigin-small">Add Meals</button></a>
                 <button class="uk-button uk-button-primary uk-align-center uk-margin-remove-top">Book Tickets</button>
 
             </div>
