--- a/homepage/food.html
+++ b/homepage/food.html
@@ -59,6 +59,9 @@
                             <div class="uk-navbar-dropdown">
                                 <ul class="uk-nav uk-navbar-dropdown-nav">
                                     <li>
+                                        <a href="ticket.html">My Tickets</a>
+                                    </li>
+                                    <li>
                                         <a href="#">Profile</a>
                                     </li>
                                     <li>
