--- a/homepage/search.html
+++ b/homepage/search.html
@@ -54,6 +54,9 @@
                             <div class="uk-navbar-dropdown">
                                 <ul class="uk-nav uk-navbar-dropdown-nav">
                                     <li>
+                                        <a href="ticket.html">My Tickets</a>
+                                    </li>
+                                    <li>
                                         <a href="#">Profile</a>
                                     </li>
                                     <li>
