--- a/homepage/ticket.html
+++ b/homepage/ticket.html
@@ -55,6 +55,9 @@
                             <div class="uk-navbar-dropdown">
                                 <ul class="uk-nav uk-navbar-dropdown-nav">
                                     <li>
+                                        <a href="#">My Tickets</a>
+                                    </li>
+                                    <li>
                                         <a href="#">Profile</a>
                                     </li>
                                     <li>
@@ -80,25 +83,25 @@
             </div>
             <div class="uk-card-body">
                 <div class="uk-grid uk-child-width-expand">
-                  <div id="seat-map"></div>
-                  <div>
-                    <button class="uk-button uk-button-primary uk-width-1-1">Swap Seats</button>
-                    <p>You can swap seats with other passengers by sending them a swap request.</p>
-                    <hr>
-                    <h4>Swap Requests:</h4>
-                    <div class="uk-margin-medium-bottom">
-                      <span class="uk-badge">22</span> ⇋ <span class="uk-badge">40</span>
-                      <p class="uk-text-medium uk-margin-small">Swap request from Swaraj Laha</p>
-                      <button class="uk-button uk-button-secondary uk-button-small">Accept</button>
-                      <button class="uk-button uk-button-default uk-button-small">Reject</button>
+                    <div id="seat-map"></div>
+                    <div>
+                        <button class="uk-button uk-button-primary uk-width-1-1">Swap Seats</button>
+                        <p>You can swap seats with other passengers by sending them a swap request.</p>
+                        <hr>
+                        <h4>Swap Requests:</h4>
+                        <div class="uk-margin-medium-bottom">
+                            <span class="uk-badge">22</span> ⇋ <span class="uk-badge">40</span>
+                            <p class="uk-text-medium uk-margin-small">Swap request from Swaraj Laha</p>
+                            <button class="uk-button uk-button-secondary uk-button-small">Accept</button>
+                            <button class="uk-button uk-button-default uk-button-small">Reject</button>
+                        </div>
+                        <div class="uk-margin-medium-bottom">
+                            <span class="uk-badge">24</span> ⇋ <span class="uk-badge">36</span>
+                            <p class="uk-text-medium uk-margin-small">Swap request from Swaraj Laha</p>
+                            <button class="uk-button uk-button-secondary uk-button-small">Accept</button>
+                            <button class="uk-button uk-button-default uk-button-small">Reject</button>
+                        </div>
                     </div>
-                    <div class="uk-margin-medium-bottom">
-                      <span class="uk-badge">24</span> ⇋ <span class="uk-badge">36</span>
-                      <p class="uk-text-medium uk-margin-small">Swap request from Swaraj Laha</p>
-                      <button class="uk-button uk-button-secondary uk-button-small">Accept</button>
-                      <button class="uk-button uk-button-default uk-button-small">Reject</button>
-                    </div>
-                  </div>
                 </div>
             </div>
 
