Add close functionality to add meal button

--- a/homepage/food.html
+++ b/homepage/food.html
@@ -94,7 +94,9 @@
                         <div class="uk-width-2-3">
                             <h3>Lunch Meal</h3>
                             <p>Includes 1 paratha, rice,dal, papad</p>
-                            <p> 3.5 <span uk-icon="icon: star; ratio:0.75"></span> <button class="uk-button uk-button-primary uk-align-right uk-button-small">Add This Pack</button> </p>
+                            <p> 3.5 <span uk-icon="icon: star; ratio:0.75"></span>
+                                <a href="javascript:window.open('','_self').close();"> <button class="uk-button uk-button-primary uk-align-right uk-button-small">Add This Pack</button> </a>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -107,7 +109,9 @@
                         <div class="uk-width-2-3">
                             <h3>Dinner Meal</h3>
                             <p>Includes 1 paratha, rice,dal, papad</p>
-                            <p> 3.5 <span uk-icon="icon: star; ratio:0.75"></span> <button class="uk-button uk-button-primary uk-align-right uk-button-small">Add This Pack</button> </p>
+                            <p> 3.5 <span uk-icon="icon: star; ratio:0.75"></span>
+                                <a href="javascript:window.open('','_self').close();"> <button class="uk-button uk-button-primary uk-align-right uk-button-small">Add This Pack</button> </a>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -120,7 +124,9 @@
                         <div class="uk-width-2-3">
                             <h3>Breakfast Meal</h3>
                             <p>Includes 1 paratha, rice,dal, papad</p>
-                            <p> 3.5 <span uk-icon="icon: star; ratio:0.75"></span> <button class="uk-button uk-button-primary uk-align-right uk-button-small">Add This Pack</button> </p>
+                            <p> 3.5 <span uk-icon="icon: star; ratio:0.75"></span>
+                                <a href="javascript:window.open('','_self').close();"> <button class="uk-button uk-button-primary uk-align-right uk-button-small">Add This Pack</button> </a>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -132,7 +138,6 @@
         </div>
 
     </div>
-
 
 
     <script src="js/uikit.min.js"></script>
