Update profile page

--- a/homepage/profile.html
+++ b/homepage/profile.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>IRCTC 2.0 | Ticket Details</title>
+    <title>IRCTC 2.0 |My Profile</title>
     <link rel="stylesheet" href="css/uikit.min.css" />
     <link rel="stylesheet" href="css/jquery.seat-charts.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -77,12 +77,54 @@
     </div>
 
     <div class="uk-container">
-        <div class="uk-card uk-card-default uk-card-body uk-align-center uk-width-1-2@m uk-margin-large-bottom">
+        <div uk-grid>
+            <div class="uk-card uk-card-default uk-card-body uk-align-left uk-width-1-4 uk-margin-large-bottom">
+                <div class="uk-card uk-card2 uk-card-default uk-card-title uk-margin-small">
+                    <div uk-grid>
+                        <div class="uk-width-1-3">
+                            <span uk-icon="icon: user;ratio: 2.5"></span>
+                        </div>
+                        <div class="uk-width-2-3">
+                            <p><strong>ABHIJIT PARIDA</strong><br>abhijitparida01</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="uk-card uk-card-default uk-card-body uk-margin-remove-top">
+                    <ul class="uk-list uk-list-divider">
+                        <li>WALLET BALANCE :<strong>₹4200</strong></li>
+                        <li>USER NAME: abhijitparida01</li>
+                        <li>AADHAR CARD: 1541012143 </li>
+                        <li>PHONE NUMBER: 9776 242 2727</li>
+                        <li>EMAIL : abhijit.parida.me@gmail.com</li>
+                    </ul>
+
+                </div>
+            </div>
+
+            <div class="uk-card uk-card-default uk-card uk-align-right uk-width-2-3 uk-margin-large-bottom">
+
+                <div class="uk-title uk-margin-small">
+                    <h3>Ticket History</h3>
+                </div>
 
 
+                <div class="uk-card uk-card2 uk-card-default uk-card-body">
+                    <div class="uk-title">
+                        <h3>Train name</h3>
+                        <p><strong>Train Number<br>Station 01 - - > Station 02<br>PNR NUMBER </strong> </p>
+                    </div>
+                </div>
 
+                <div class="uk-card uk-card2 uk-card-default uk-card-body">
+                    <div class="uk-title">
+                        <h3>Train name</h3>
+                        <p><strong>Train Number<br>Station 01 - - > Station 02<br>PNR NUMBER </strong> </p>
+                    </div>
+                </div>
+
+            </div>
         </div>
-
     </div>
 
 
